--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
